--- a/index.html
+++ b/index.html
@@ -111,62 +111,62 @@
     </div>
   </header>
 
-  <h2 class="title">Sports Categories</h2>
+  <h2 class="title">Streaming Hub</h2>
 
   <div class="categories">
     <div class="category">
-      <a href="https://www.fifa.com" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/1165/1165821.png" alt="Football">
-        <p>Football</p>
+      <a href="https://tv9.idlixku.com/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/1165/1165821.png" alt="Movies 1">
+        <p>Movies 1</p>
       </a>
     </div>
 
     <div class="category">
-      <a href="https://www.volleyballworld.com" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/861/861342.png" alt="Volleyball">
-        <p>Volleyball</p>
+      <a href="https://d21.team/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/861/861342.png" alt="Movies 2">
+        <p>Movies 2</p>
       </a>
     </div>
 
     <div class="category">
-      <a href="https://bwfbadminton.com" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2889/2889652.png" alt="Badminton">
-        <p>Badminton</p>
+      <a href="https://www.ngefilm21.pw/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/2889/2889652.png" alt="Movies 3">
+        <p>Movies 3</p>
       </a>
     </div>
 
     <div class="category">
-      <a href="https://www.atptour.com" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/861/861361.png" alt="Tennis">
-        <p>Tennis</p>
+      <a href="https://v1.pusatfilm21info.com/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/861/861361.png" alt="Movies 4">
+        <p>Movies 4</p>
       </a>
     </div>
 
     <div class="category">
-      <a href="https://www.formula1.com" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/3075/3075977.png" alt="Racing">
-        <p>Racing</p>
+      <a href="https://link.oploverz.ltd/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/3075/3075977.png" alt="Anime 1">
+        <p>Anime 1</p>
       </a>
     </div>
 
     <div class="category">
-      <a href="https://www.ufc.com" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/5731/5731486.png" alt="Combat Sport">
-        <p>Combat Sport</p>
+      <a href="https://samehadaku.care/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/5731/5731486.png" alt="Anime 2">
+        <p>Anime 2</p>
       </a>
     </div>
 
     <div class="category">
-      <a href="https://www.pgatour.com" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2972/2972391.png" alt="Golf">
-        <p>Golf</p>
+      <a href="https://www.rbtvplus.com/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/2972/2972391.png" alt="Sports 1">
+        <p>Sports 1</p>
       </a>
     </div>
 
     <div class="category">
-      <a href="https://www.nba.com" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/861/861373.png" alt="Basketball">
-        <p>Basketball</p>
+      <a href="https://idn194.livesports088.com/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/861/861373.png" alt="Sports 2">
+        <p>Sports 2</p>
       </a>
     </div>
   </div>
