--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
 
   <header>
-    <h1>Sports Hub</h1>
+    <h1>Streaming Hub</h1>
     <div class="search-box">
       <input type="text" placeholder="What to watch today?">
     </div>
@@ -173,3 +173,4 @@
 
 </body>
 </html>
+
