--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
 
   <header>
-    <h1>Streaming Hub</h1>
+    <h1>Sports Hub</h1>
     <div class="search-box">
       <input type="text" placeholder="What to watch today?">
     </div>
@@ -116,56 +116,56 @@
   <div class="categories">
     <div class="category">
       <a href="https://tv9.idlixku.com/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/1165/1165821.png" alt="Movies 1">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/video_14074245.png" alt="Movies 1">
         <p>Movies 1</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://d21.team/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/861/861342.png" alt="Movies 2">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/video_14074245.png" alt="Movies 2">
         <p>Movies 2</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://www.ngefilm21.pw/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2889/2889652.png" alt="Movies 3">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/video_14074245.png" alt="Movies 3">
         <p>Movies 3</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://v1.pusatfilm21info.com/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/861/861361.png" alt="Movies 4">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/video_14074245.png" alt="Movies 4">
         <p>Movies 4</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://link.oploverz.ltd/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/3075/3075977.png" alt="Anime 1">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/vecteezy_luffy-anime-one-piece_21857990.jpg" alt="Anime 1">
         <p>Anime 1</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://samehadaku.care/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/5731/5731486.png" alt="Anime 2">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/vecteezy_luffy-anime-one-piece_21857990.jpg" alt="Anime 2">
         <p>Anime 2</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://www.rbtvplus.com/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2972/2972391.png" alt="Sports 1">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/football.png" alt="Sports 1">
         <p>Sports 1</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://idn194.livesports088.com/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/861/861373.png" alt="Sports 2">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/football.png" alt="Sports 2">
         <p>Sports 2</p>
       </a>
     </div>
@@ -173,4 +173,3 @@
 
 </body>
 </html>
-
