--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       width: 100%;
       background-color: #111;
       padding: 12px 24px;
-      display: flex;
+        text-align: center;
       justify-content: space-between;
       align-items: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
@@ -105,7 +105,7 @@
 <body>
 
   <header>
-    <h1>Sports Hub</h1>
+    <h1>Streaming Hub</h1>
     <div class="search-box">
       <input type="text" placeholder="What to watch today?">
     </div>
@@ -173,3 +173,4 @@
 
 </body>
 </html>
+
