--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Streaming Hub</title>
+  <title>STREAMING HUB</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
@@ -21,6 +21,7 @@
       width: 100%;
       background-color: #111;
       padding: 12px 24px;
+      font-size: 6rem;
         text-align: center;
       justify-content: space-between;
       align-items: center;
@@ -173,4 +174,5 @@
 
 </body>
 </html>
+
 
