--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>STREAMING HUB</title>
+  <title>Streaming Hub</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
@@ -21,7 +21,7 @@
       width: 100%;
       background-color: #111;
       padding: 12px 24px;
-      font-size: 6rem;
+      font-size: 3rem;
         text-align: center;
       justify-content: space-between;
       align-items: center;
@@ -106,7 +106,7 @@
 <body>
 
   <header>
-    <h1>Streaming Hub</h1>
+    <h1>STREAMING HUB</h1>
     <div class="search-box">
       <input type="text" placeholder="What to watch today?">
     </div>
@@ -174,5 +174,6 @@
 
 </body>
 </html>
+
 
 
