--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Streaming Hub</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
@@ -10,21 +10,46 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color: #0c0c0c;
       color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      animation: slideBackground 16s infinite alternate ease-in-out;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    /* 🔄 Animasi slide antar dua background */
+    @keyframes slideBackground {
+      0% {
+        background-image: url('https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/assets/background/Peaky%20Blinders.jfif');
+      }
+      50% {
+        background-image: url('https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/assets/background/Squid%20Game%202.jfif');
+      }
+      100% {
+        background-image: url('https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/assets/background/Peaky%20Blinders.jfif');
+      }
+    }
+
+    /* 🔳 Overlay agar teks tetap jelas */
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.75);
+      z-index: -1;
     }
 
     header {
       width: 100%;
-      background-color: #111;
+      background-color: rgba(17, 17, 17, 0.85);
       padding: 12px 24px;
       font-size: 2.2rem;
-        text-align: center;
-      justify-content: space-between;
-      align-items: center;
+      text-align: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
     }
 
@@ -33,7 +58,6 @@
       font-size: 2rem;
       font-weight: 700;
       margin-top: 60px;
-      position: relative;
       background: linear-gradient(90deg, #ff6b6b, #feca57, #48dbfb, #1dd1a1);
       background-size: 300%;
       -webkit-background-clip: text;
@@ -101,6 +125,13 @@
       margin-top: 10px;
       font-size: 0.9rem;
     }
+
+    @media (max-width: 768px) {
+      .categories {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -117,56 +148,56 @@
   <div class="categories">
     <div class="category">
       <a href="https://tv9.idlixku.com/" target="_blank">
-        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/video_14074245.png" alt="Movies 1">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/icons/video_14074245.png" alt="Movies 1">
         <p>Movies 1</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://d21.team/" target="_blank">
-        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/video_14074245.png" alt="Movies 2">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/icons/video_14074245.png" alt="Movies 2">
         <p>Movies 2</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://www.ngefilm21.pw/" target="_blank">
-        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/video_14074245.png" alt="Movies 3">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/icons/video_14074245.png" alt="Movies 3">
         <p>Movies 3</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://v1.pusatfilm21info.com/" target="_blank">
-        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/video_14074245.png" alt="Movies 4">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/icons/video_14074245.png" alt="Movies 4">
         <p>Movies 4</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://link.oploverz.ltd/" target="_blank">
-        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/vecteezy_luffy-anime-one-piece_21857990.jpg" alt="Anime 1">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/icons/vecteezy_luffy-anime-one-piece_21857990.jpg" alt="Anime 1">
         <p>Anime 1</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://samehadaku.care/" target="_blank">
-        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/vecteezy_luffy-anime-one-piece_21857990.jpg" alt="Anime 2">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/icons/vecteezy_luffy-anime-one-piece_21857990.jpg" alt="Anime 2">
         <p>Anime 2</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://www.rbtvplus.com/" target="_blank">
-        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/football.png" alt="Sports 1">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/icons/football.png" alt="Sports 1">
         <p>Sports 1</p>
       </a>
     </div>
 
     <div class="category">
       <a href="https://idn194.livesports088.com/" target="_blank">
-        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/refs/heads/main/icons/football.png" alt="Sports 2">
+        <img src="https://raw.githubusercontent.com/akbarromadon34-beep/web-streaming/main/icons/football.png" alt="Sports 2">
         <p>Sports 2</p>
       </a>
     </div>
@@ -174,7 +205,3 @@
 
 </body>
 </html>
-
-
-
-
