--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       width: 100%;
       height: 100vh;
       overflow: hidden;
-      z-index: -1;
+      z-index: -2;
     }
 
     .background-slider img {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* biar gambar penuh */
+      object-fit: cover;
       position: absolute;
       top: 0;
       left: 0;
@@ -42,6 +42,17 @@
 
     .background-slider img.active {
       opacity: 1;
+    }
+
+    /* === OVERLAY === */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: -1;
     }
 
     /* === HEADER === */
@@ -104,13 +115,15 @@
     /* === CATEGORY GRID === */
     .categories {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 50px;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 40px;
       justify-items: center;
       margin-top: 60px;
-      width: 80%;
+      width: 90%;
+      max-width: 1000px;
       z-index: 2;
       position: relative;
+      padding-bottom: 60px;
     }
 
     .category {
@@ -147,15 +160,39 @@
       font-size: 0.9rem;
     }
 
-    /* === BACKGROUND OVERLAY (untuk kontras) === */
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 1;
+    /* === RESPONSIVE === */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      .title {
+        font-size: 1.6rem;
+        margin-top: 40px;
+      }
+
+      .categories {
+        gap: 30px;
+      }
+
+      .category img {
+        width: 70px;
+        height: 70px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .categories {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      .search-box input {
+        width: 180px;
+      }
+
+      .category p {
+        font-size: 0.8rem;
+      }
     }
   </style>
 </head>
