--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     .categories {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 40px;
+      gap: 50px; /* Lebih renggang */
       justify-items: center;
       margin-top: 60px;
       width: 90%;
@@ -135,9 +135,10 @@
       transform: translateY(-8px) scale(1.05);
     }
 
+    /* === ICON LEBIH BESAR === */
     .category img {
-      width: 80px;
-      height: 80px;
+      width: 110px;  /* Sebelumnya 80px */
+      height: 110px; /* Sebelumnya 80px */
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.6);
       padding: 10px;
@@ -157,7 +158,7 @@
 
     .category p {
       margin-top: 10px;
-      font-size: 0.9rem;
+      font-size: 1rem;
     }
 
     /* === RESPONSIVE === */
@@ -172,12 +173,12 @@
       }
 
       .categories {
-        gap: 30px;
+        gap: 40px;
       }
 
       .category img {
-        width: 70px;
-        height: 70px;
+        width: 90px;
+        height: 90px;
       }
     }
 
@@ -188,6 +189,11 @@
 
       .search-box input {
         width: 180px;
+      }
+
+      .category img {
+        width: 80px;
+        height: 80px;
       }
 
       .category p {
